[gd_scene load_steps=10 format=3 uid="uid://ccfwnjpit55o7"]

[ext_resource type="PackedScene" uid="uid://ln50r4xpe1ai" path="res://scenes/main_game/field/field.tscn" id="1_gmygf"]
[ext_resource type="Script" uid="uid://yxngfsmw1toa" path="res://scenes/main_game/combat/fields/plant_field.gd" id="2_cw3i7"]
[ext_resource type="PackedScene" uid="uid://673wlt1ldg8q" path="res://scenes/GUI/utils/progress_bar/gui_segmented_progress_bar.tscn" id="5_rdxdm"]
[ext_resource type="Texture2D" uid="uid://dxyqfprxbenb6" path="res://resources/sprites/GUI/icons/resources/icon_light.png" id="6_qfgpi"]
[ext_resource type="Texture2D" uid="uid://ck8xmcukmvwwu" path="res://resources/sprites/GUI/icons/resources/icon_water.png" id="7_suj65"]
[ext_resource type="PackedScene" uid="uid://e0jhp4mhrm81" path="res://scenes/main_game/combat/fields/gui_field_status_container.tscn" id="8_rburk"]
[ext_resource type="Texture2D" uid="uid://dnma4y5ajsv2w" path="res://resources/sprites/GUI/icons/other_icons/check_icon_plant_complete.png" id="9_jdk52"]
[ext_resource type="PackedScene" uid="uid://jaeock3j73t2" path="res://scenes/main_game/combat/fields/gui_plant_ability_icon_container.tscn" id="10_prsfb"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_sh3mw"]
resource_local_to_scene = true
polygon = PackedVector2Array(-16, 1, 16, 1, 16, 18, -16, 18)

[node name="PlantField" instance=ExtResource("1_gmygf")]
script = ExtResource("2_cw3i7")

[node name="LightOccluder2D" parent="." index="6"]
occluder = SubResource("OccluderPolygon2D_sh3mw")

[node name="ProgressBars" type="VBoxContainer" parent="." index="7"]
unique_name_in_owner = true
z_index = 1
offset_left = -18.0
offset_top = 14.0
offset_right = 17.0
offset_bottom = 28.0
theme_override_constants/separation = 0

[node name="LightBar" parent="ProgressBars" index="0" instance=ExtResource("5_rdxdm")]
unique_name_in_owner = true
z_index = 1
custom_minimum_size = Vector2(0, 7)
layout_mode = 2
max_value = 2
segment_color = Color(1, 0.784314, 0.145098, 1)
icon_texture = ExtResource("6_qfgpi")
icon_size = Vector2(6, 6)

[node name="WaterBar" parent="ProgressBars" index="1" instance=ExtResource("5_rdxdm")]
unique_name_in_owner = true
z_index = 1
custom_minimum_size = Vector2(0, 7)
layout_mode = 2
max_value = 5
icon_texture = ExtResource("7_suj65")
icon_size = Vector2(6, 6)

[node name="GUIFieldStatusContainer" parent="." index="8" instance=ExtResource("8_rburk")]
unique_name_in_owner = true
z_index = 1
offset_left = 22.0
offset_top = 11.0
offset_right = 22.0
offset_bottom = 11.0

[node name="CompleteCheck" type="TextureRect" parent="." index="9"]
unique_name_in_owner = true
z_index = 1
offset_left = -4.0
offset_top = 15.0
offset_right = 4.0
offset_bottom = 23.0
texture = ExtResource("9_jdk52")
stretch_mode = 5

[node name="GUIPlantAbilityIconContainer" parent="." index="10" instance=ExtResource("10_prsfb")]
unique_name_in_owner = true
z_index = 1
anchors_preset = 2
anchor_left = 0.0
anchor_right = 0.0
offset_left = -22.0
offset_top = 11.0
offset_right = -22.0
offset_bottom = 11.0
grow_horizontal = 1
